--- a/src/css/backdrop.css
+++ b/src/css/backdrop.css
@@ -1,64 +1,69 @@
 .backdrop {
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--navy_blue-modal, rgba(46, 47, 66, 0.4));
+  width: 100%;
+  height: 100%;
+  background-color: var(--navy_blue-modal);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .backdrop-content {
   padding: 24px;
   max-width: 400px;
-  background-color: var(--dairy, #fcfcfc);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: var(--dairy);
+  position: relative;
+  border-radius: 4px;
 }
 
 .backdrop-title {
-  color: var(--navy_blue, #2e2f42);
-  /* text-align: center; */
+  color: var(--navy_blue);
+  text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02em;
+  margin-top: 48px;
+  margin-bottom: 16px;
 }
 
-.backdrop-form {
-  display: flex;
-  flex-direction: column;
-  height: 584px;
-}
-
-textarea#message {
-  resize: none;
-}
-
-.backdrop-form label {
-  color: var(--light_slate, #8e8f99);
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-}
-
-.backdrop-form a {
-  color: var(--iris, #4d5ae5);
-  text-decoration-line: underline;
-}
-
-.form-btn {
-  color: var(--white, #fff);
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  padding: 16px 32px;
+.close-modal-btn {
+  position: absolute;
+  background-color: transparent;
   border: none;
-  border-radius: 4px;
-  background: var(--iris, #4d5ae5);
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  width: 170px;
-  margin: 0 auto;
+  top: 24px;
+  right: 24px;
+  line-height: 0;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--cornflower);
+  border: 1px solid #0000001a;
+
+  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-modal-btn:hover,
+.close-modal-btn:focus {
+  background-color: var(--ocean);
+  fill: var(--white);
+  border-color: transparent;
+}
+
+.close-modal-icon {
+  width: 8px;
+  height: 8px;
 }
