--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,3 @@
-/* Portfolio page */
-@import url(./portfolio.css);
-/* /Portfolio page */
-
 @import url(./backdrop.css);
 @import url(./form.css);
 
@@ -15,7 +11,6 @@
   --cornflower: #e7e9fc;
   --cloud: #f4f4fd;
   --navy_blue-modal: rgba(46, 47, 66, 0.4);
-  --gray: #2e2f42;
   --white: #ffffff;
   --dairy: #fcfcfc;
 }
@@ -104,15 +99,6 @@ ul {
   border-radius: 2px;
 }
 
-.title {
-  color: var(--navy_blue, #2e2f42);
-  text-align: center;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  margin-bottom: 72px;
-}
-
 .accent {
   color: var(--iris, #4d5ae5);
 }
@@ -160,7 +146,7 @@ ul {
 }
 
 .hero {
-  background-color: var(--gray, #2e2f42);
+  background-color: var(--navy_blue);
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -172,33 +158,25 @@ ul {
   padding-bottom: 112px;
 }
 
-@media screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx),
-  screen and (min-device-pixel-ratio: 2) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../img/hero/hero-mobile@2x.jpg");
-  }
-}
-
 .hero-title {
   color: var(--white, #ffffff);
-  text-align: center;
-  letter-spacing: 0.02em;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 72px;
-  font-size: 36px;
-  line-height: 1.11;
   max-width: 320px;
+}
+
+.title {
+  color: var(--navy_blue, #2e2f42);
 }
 
 .hero-title,
 .title {
   text-transform: capitalize;
+  text-align: center;
+  font-size: 36px;
+  line-height: 1.11;
+  margin-bottom: 72px;
+  letter-spacing: 0.02em;
 }
 
 .hero-button {
@@ -219,10 +197,6 @@ ul {
 .hero-button:focus {
   background-color: var(--ocean, #404bbf);
 }
-
-/* .advantages {
-  padding-bottom: 0;
-} */
 
 .advantages-title {
   color: var(--navy_blue, #2e2f42);
@@ -338,7 +312,6 @@ ul {
 .customer-list svg {
   width: 72px;
   height: 40px;
-
   fill: var(--light_slate, #778899);
 }
 
@@ -474,6 +447,7 @@ footer {
 
 footer .logo {
   color: var(--cloud, #f5f5f5);
+  display: block;
 }
 
 .footer-description {
@@ -573,10 +547,6 @@ footer .logo,
   margin-bottom: 16px;
 }
 
-footer .logo {
-  display: block;
-}
-
 @media screen and (max-width: 767px) {
   .header-nav {
     display: none;
@@ -629,30 +599,12 @@ footer .logo {
 }
 
 @media screen and (min-width: 768px) {
-  @media screen and (max-width: 1157px) {
-    .header .header-contact {
-      padding: 0;
-    }
-  }
-
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
       url(../img/hero/hero-tablet.jpg);
-  }
-
-  @media screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx),
-    screen and (min-device-pixel-ratio: 2) {
-    .hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url("../img/hero/hero-tablet@2x.jpg");
-    }
   }
 
   .container {
@@ -759,12 +711,16 @@ footer .logo {
   }
 }
 
-@media screen and (max-width: 1157px) {
+@media screen and (min-width: 768px) and (max-width: 1157px) {
   .container > .customer-list,
   .container > .team-list,
   footer .container {
     max-width: 552px;
     margin: 0 auto;
+  }
+
+  .header .header-contact {
+    padding: 0;
   }
 }
 
@@ -804,18 +760,6 @@ footer .logo {
     padding-bottom: 188px;
   }
 
-  @media screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx),
-    screen and (min-device-pixel-ratio: 2) {
-    .hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url("../img/hero/hero-desktop@2x.jpg");
-    }
-  }
-
   .hero-title {
     margin-bottom: 48px;
   }
@@ -840,5 +784,41 @@ footer .logo {
   .footer-container {
     flex-direction: row;
     column-gap: 80px;
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px),
+  screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../img/hero/hero-mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../img/hero/hero-tablet@2x.jpg");
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
+  screen and (min-resolution: 2dppx) and (min-width: 1158px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../img/hero/hero-desktop@2x.jpg");
   }
 }
