--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,3 @@
-@import url(./backdrop.css);
-@import url(./form.css);
-
 :root {
   --iris: #4d5ae5;
   --ocean: #404bbf;
@@ -36,9 +33,9 @@ body {
 
 footer,
 section {
-  min-width: fit-content;
   padding-top: 96px;
   padding-bottom: 96px;
+  min-width: 300px;
 }
 
 img {
@@ -76,11 +73,13 @@ ul {
 }
 
 .container {
-  width: calc(396px + (16px * 2));
+  width: 100%;
+  max-width: calc(396px + (16px * 2));
   margin-left: auto;
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
+  min-width: 300px;
 }
 
 .active {
@@ -289,7 +288,7 @@ ul {
 
 .social-list {
   display: flex;
-  column-gap: 24px;
+  /* column-gap: 24px; */
   justify-content: space-between;
 }
 
@@ -547,6 +546,245 @@ footer .logo,
   margin-bottom: 16px;
 }
 
+.backdrop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--navy_blue-modal);
+  opacity: 0;
+  padding: 0 16px;
+  pointer-events: none;
+  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  opacity: 1;
+  pointer-events: auto;
+  overflow: hidden;
+}
+
+.is-modal-open {
+  overflow: hidden;
+}
+
+.backdrop-content {
+  padding: 24px;
+  max-width: 400px;
+  background-color: var(--dairy);
+  position: relative;
+  border-radius: 4px;
+  min-width: 320px;
+}
+
+.backdrop-title {
+  color: var(--navy_blue);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  margin-top: 48px;
+  margin-bottom: 16px;
+}
+
+.close-modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  line-height: 0;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--cornflower);
+  border: 1px solid #0000001a;
+
+  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-modal-btn:hover,
+.close-modal-btn:focus {
+  background-color: var(--ocean);
+  fill: var(--white);
+  border-color: transparent;
+}
+
+.close-modal-icon {
+  width: 8px;
+  height: 8px;
+}
+
+.order-form-label {
+  color: var(--light_slate, #8e8f99);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+  display: inline-block;
+}
+
+.order-form-input,
+.order-form-textarea {
+  outline: transparent;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  border: 1px solid var(--navy_blue-modal);
+  width: 100%;
+}
+
+.order-form-input {
+  height: 58px;
+  padding-left: 38px;
+  border-radius: 4px;
+}
+
+.order-form-textarea {
+  height: 120px;
+  border-radius: 4px;
+  padding: 8px 16px;
+  resize: none;
+}
+
+.order-form-textarea::placeholder {
+  color: var(--light_slate, #8e8f99);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+.order-form-input:focus,
+.order-form-textarea:focus {
+  border-color: var(--iris, #4d5ae5);
+  transition: border-color 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-form-input:focus + .form-icon {
+  fill: var(--iris, #4d5ae5);
+  transition: fill 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-container {
+  margin-bottom: 8px;
+}
+
+.input-container.custom-checkbox-styles {
+  position: relative;
+  margin-bottom: 24px;
+}
+
+.privacy-policy-link {
+  color: var(--iris, #4d5ae5);
+  position: relative;
+
+  @media screen and (max-width: 419px) {
+    margin-left: 24px;
+  }
+}
+
+.custom-checkbox-label {
+  color: var(--light_slate, #8e8f99);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.custom-checkbox-label::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid var(--navy_blue-modal);
+  background-color: transparent;
+  border-radius: 4px;
+  margin-right: 8px;
+  cursor: pointer;
+}
+
+.checkbox-original:checked + .custom-checkbox-label::before {
+  content: url("../img/checkmark.svg");
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-color: transparent;
+}
+
+.checkbox-original:focus + .custom-checkbox-label::before {
+  border-color: var(--iris);
+}
+
+.checkbox-original {
+  position: absolute;
+  z-index: -10;
+  top: 4px;
+  left: 2px;
+}
+
+.checkbox-original:checked + .custom-checkbox-label::before {
+  background-color: var(--iris);
+}
+
+.privacy-policy-link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: var(--iris);
+  bottom: 2px;
+  right: 0;
+  position: absolute;
+}
+
+.form-btn {
+  color: var(--white, #fff);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  width: 170px;
+  margin: 0 auto;
+}
+
+.form-icon {
+  width: 18px;
+  height: 18px;
+  fill: var(--navy_blue);
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px),
+  screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../img/hero/hero-mobile@2x.jpg");
+  }
+}
 @media screen and (max-width: 767px) {
   .header-nav {
     display: none;
@@ -563,7 +801,7 @@ footer .logo,
   }
 
   .container > .team-list {
-    width: calc(264px + 32px);
+    max-width: calc(264px + 32px);
     margin: 0 auto;
   }
 
@@ -598,6 +836,18 @@ footer .logo,
   }
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../img/hero/hero-tablet@2x.jpg");
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(
@@ -607,8 +857,13 @@ footer .logo,
       url(../img/hero/hero-tablet.jpg);
   }
 
+  .mobile-menu {
+    display: none;
+  }
+
   .container {
     width: calc(736px + (16px * 2));
+    max-width: none;
   }
 
   .logo {
@@ -709,6 +964,10 @@ footer .logo,
   .footer-form-btn {
     margin: 0;
   }
+
+  .order-form-input {
+    min-width: 360px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1157px) {
@@ -724,6 +983,17 @@ footer .logo,
   }
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
+  screen and (min-resolution: 2dppx) and (min-width: 1158px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url("../img/hero/hero-desktop@2x.jpg");
+  }
+}
 @media screen and (min-width: 1158px) {
   .logo {
     margin-right: 120px;
@@ -787,38 +1057,78 @@ footer .logo,
   }
 }
 
-@media screen and (min-resolution: 192dpi) and (max-width: 767px),
-  screen and (min-resolution: 2dppx) and (max-width: 767px),
-  screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../img/hero/hero-mobile@2x.jpg");
-  }
+.mobile-close-btn {
+  background-color: var(--cornflower);
 }
 
-@media screen and (min-resolution: 192dpi) and (min-width: 768px),
-  screen and (min-resolution: 2dppx) and (min-width: 768px),
-  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../img/hero/hero-tablet@2x.jpg");
-  }
+.mobile-menu {
+  background-color: var(--white);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+  transform: translateX(100%);
+  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-resolution: 192dpi) and (min-width: 1158px),
-  screen and (min-resolution: 2dppx) and (min-width: 1158px),
-  screen and (min-device-pixel-ratio: 2) and (min-width: 1158px) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url("../img/hero/hero-desktop@2x.jpg");
+.is-mobile-menu-open {
+  transform: translateX(0);
+}
+
+.mobile-menu .social-list {
+  column-gap: 56px;
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  @media screen and (max-width: 360px) {
+    column-gap: 28px;
   }
+}
+.pages-list {
+  margin-top: 40px;
+}
+
+.pages-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.pages-list-link {
+  color: var(--navy_blue);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+}
+
+.pages-list-link.active::after {
+  content: none;
+}
+
+.mobile-contact-list {
+  letter-spacing: 0.02em;
+  position: absolute;
+  bottom: 128px;
+  left: 40px;
+}
+
+.mobile-contact-item:first-child .mobile-contact-link {
+  color: var(--iris);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+}
+
+.mobile-contact-item:last-child .mobile-contact-link {
+  color: var(--slate, #434455);
+  font-family: Roboto;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.mobile-contact-item {
+  margin-top: 40px;
 }
